--- a/Cyberun Challenge/package.json
+++ b/Cyberun Challenge/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jsonforms/core": "^3.5.1",
+    "@jsonforms/material-renderers": "^3.5.1",
+    "@jsonforms/react": "^3.5.1",
+    "@jsonforms/vanilla-renderers": "^3.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
