--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.0",
+    "@ant-design/pro-components": "^2.8.4",
+    "@emotion/css": "^11.13.5",
     "@jsonforms/core": "^3.5.1",
     "@jsonforms/material-renderers": "^3.5.1",
     "@jsonforms/react": "^3.5.1",
-    "@jsonforms/vanilla-renderers": "^3.5.1",
+    "antd": "^5.23.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
